corrected a letter spacing issue that was squeezing the Vis text

--- a/modules/core/client/css/kalli.css
+++ b/modules/core/client/css/kalli.css
@@ -9,7 +9,6 @@ body {
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
 	background-color: #fff;
-	letter-spacing: -0.02em;
 	font-size: 14px;
 	overflow-x: hidden;
 }
